Add Connection in Tray item menu

--- a/Client/SwitchPresence-Rewritten.csproj
+++ b/Client/SwitchPresence-Rewritten.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -91,7 +92,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Connected.ico" />
+    <None Include="Disconnected.ico" />
     <Content Include="Icon.ico" />
+    <None Include="Resources\ConnectedIcon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
