--- a/Server/Makefile
+++ b/Server/Makefile
@@ -65,7 +65,7 @@ LIBS	:= -lnx
 # list of directories containing libraries, this must be the top level containing
 # include and lib
 #---------------------------------------------------------------------------------
-LIBDIRS	:= $(PORTLIBS) $(LIBNX)
+LIBDIRS	:= $(LIBNX)
 
 
 #---------------------------------------------------------------------------------
