Rework scene system to be much more organized

--- a/Manager/Makefile
+++ b/Manager/Makefile
@@ -39,7 +39,9 @@ include $(DEVKITPRO)/libnx/switch_rules
 #---------------------------------------------------------------------------------
 TARGET		:=	SwitchPresence-Rewritten-Manager
 BUILD		:=	build
-SOURCES		:=	source source/Scenes
+SOURCES		:=	source \
+				source/states \
+				source/utils
 DATA		:=	data
 INCLUDES	:=	include
 
