--- a/Client/SwitchPresence-Rewritten-GUI/SwitchPresence-GUI.csproj
+++ b/Client/SwitchPresence-Rewritten-GUI/SwitchPresence-GUI.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{E1E88510-EE21-4E59-A5FD-052063CE7AC3}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>SwitchPresence_Rewritten</RootNamespace>
-    <AssemblyName>SwitchPresence-Rewritten</AssemblyName>
+    <RootNamespace>SwitchPresence_Rewritten_GUI</RootNamespace>
+    <AssemblyName>SwitchPresence-Rewritten-GUI</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Icon.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DiscordRPC, Version=1.0.121.0, Culture=neutral, processorArchitecture=MSIL">
@@ -56,7 +56,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config.cs" />
-    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -65,7 +64,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Title.cs" />
     <Compile Include="Utils.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -95,9 +93,15 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected.ico" />
-    <None Include="Disconnected.ico" />
-    <Content Include="Icon.ico" />
+    <None Include="Resources\Connected.ico" />
+    <None Include="Resources\Disconnected.ico" />
+    <Content Include="Resources\Icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PresenceCommon\PresenceCommon.csproj">
+      <Project>{2ef451b4-7b1c-46f6-973a-26564bef4ad8}</Project>
+      <Name>PresenceCommon</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
