--- a/Client/PresenceCommon/PresenceCommon.csproj
+++ b/Client/PresenceCommon/PresenceCommon.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DataHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\Title.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
