--- a/Client/SwitchPresence-Rewritten-GUI/SwitchPresence-GUI.csproj
+++ b/Client/SwitchPresence-Rewritten-GUI/SwitchPresence-GUI.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config.cs" />
+    <Compile Include="ConfigData.cs" />
     <Compile Include="Settings.cs">
       <SubType>Form</SubType>
     </Compile>
