--- a/Client/SwitchPresence-CLI/SwitchPresence-CLI.csproj
+++ b/Client/SwitchPresence-CLI/SwitchPresence-CLI.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.7.82" />
     <PackageReference Include="DiscordRichPresence" Version="1.0.150" />
   </ItemGroup>
 
