--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=gabehttps%40gmail.com&currency_code=USD&source=url
+custom: https://link.sunthecourier.net/paypal
